--- a/package.json
+++ b/package.json
@@ -41,7 +41,16 @@
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   },
-  "browserslist": [
-    "last 2 Chrome versions"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 2 chrome version",
+      "last 2 firefox version",
+      "last 2 safari version"
+    ]
+  }
 }
